# nchu_cockpit_panel

./: .gitignore  1.txt  B737-800,B727-200F仪表模拟.debug  B737-800,B727-200F仪表模拟.dev  CMakeLists.txt  CurlTestFinal.dev  CurlTestFinal_private.h  DataReceive.cpp  DataReceive2.cpp  DataReceive2.h  DrawAI.cpp  DrawAI.h  DrawAirspeed.cpp  DrawAirspeed.h  DrawAlt.cpp  DrawAlt.h  DrawAutoControl.cpp  DrawAutoControl.h  DrawBackground.cpp  DrawBackground.h  DrawChronometer.cpp  DrawCompass.cpp  DrawCompass.h  DrawEHISControl.cpp  DrawEHISControl.h  DrawEHISControl_1.cpp  DrawEICAS.cpp  DrawEICAS.h  DrawFMC.cpp  DrawFMC.h  DrawFrame.cpp  DrawFrame.h  DrawLight.cpp  DrawLight.h  DrawLightControl.cpp  DrawLightControl.h  DrawND.cpp  DrawNDAppCenter.cpp  DrawNDAppCenter.h  DrawNDInfo.cpp  (+86 more)
737EICAS/: 737EICAS.bookmarks  737EICAS.debug  737EICAS.dev  737EICAS.layout  737EICAS_private.h  main.cpp  makefile.win
737EICAS2/: 737EICAS2.bookmarks  737EICAS2.debug  737EICAS2.dev  737EICAS2.layout  737EICAS2_private.h  DrawFrame.cpp  main.cpp  makefile.win
737FMC/: 737FMC.bookmarks  737FMC.debug  737FMC.dev  737FMC.layout  737FMC_private.h  FMCviewIndex1.h  FMCviewIndex2.cpp  FMCviewIndex2.h  FMCviewIndex3.cpp  FMCviewIndex4.cpp  FMCviewIndex4.h  FMCviewIndex5.cpp  FMCviewIndex5.h  FMCviewIndex6.cpp  FMCviewIndex7.cpp  FMCviewIndex7.h  FMCviewIndex8.cpp  FMCviewIndex8.h  FMCviewIndex9.cpp  FMCviewIndex9.h  main.cpp  makefile.win
737ND/: 737ND.bookmarks  737ND.debug  737ND.dev  737ND.layout  737ND_private.h  main.cpp  makefile.win
737PFD/: 737PFD.bookmarks  737PFD.debug  737PFD.dev  737PFD.layout  737PFD_private.h  main.cpp  makefile.win
CurlTestFinal/: CurlTestFinal.bookmarks  CurlTestFinal.debug  CurlTestFinal.dev  CurlTestFinal.layout  DrawAI.cpp  DrawAirspeed.h  DrawBackground.cpp  DrawBackground.h  DrawChronometer.cpp  DrawChronometer.h  DrawCompass.cpp  DrawCompass.h  DrawEHISControl.cpp  DrawEICAS.cpp  DrawLight.h  DrawLightControl.cpp  DrawLightControl.h  DrawNDInfo.h  DrawPFD.cpp  DrawPFD.h  DrawPFDStanby.cpp  DrawPanels.cpp  DrawScrew.cpp  DrawScrew.h  G_variable.cpp  G_variable.h  KeyboardControl.cpp  KeyboardControl.h  MapReceive.cpp  MapReceive.h  NewWindows.cpp  Panels simulation.ini  ReadFiles.cpp  main.cpp  makefile.win
data/: Panels simulation.ini  ZSCNZBAA.fms
map61821/: main.cpp  makefile.win  map61821.bookmarks  map61821.debug  map61821.dev  map61821.layout  map61821_private.h
src/communication/: DataReceive.cpp  DataReceive.h  DataReceive2.cpp  MapReceive.cpp  xplaneConnect.c
src/core/: G_variable.cpp  G_variable.h  main.cpp
src/display/: ShowEICAS.cpp  ShowEICAS.h  ShowEICAS2.cpp  ShowEICAS2.h  ShowFMC.cpp  ShowFMC.h  ShowMap.cpp  ShowMap.h  ShowND.cpp  ShowPFD.cpp  ShowPFD.h
src/instruments/eicas/: DrawEICAS.cpp
src/instruments/fmc/: FMCmain_2.cpp  FMCviewIndex1.cpp  FMCviewIndex2.h  FMCviewIndex3.cpp  FMCviewIndex6.h  FMCviewIndex7.cpp  FMCviewIndex8.cpp  FMCviewIndex8.h  FMCviewIndex9.cpp
src/instruments/mechanical/: DrawAI.h  DrawAirspeed.cpp  DrawRCDI.cpp  DrawRMI.cpp
src/instruments/nd/: DrawND.cpp  DrawND.h  DrawNDInfo.cpp
src/instruments/pfd/: DrawPFD.cpp
src/instruments/standby/: DrawPFDStandby.cpp
src/panels/: DrawAutoControl.cpp  DrawBackground.cpp  DrawEHISControl.cpp  DrawPanels.cpp  DrawPanels.h  DrawSteeringWheel.cpp  DrawSteeringWheel.h
src/utility/: NewWindows.h  WinStringUtil.h
subprocess/FMC/: FMCviewIndex1.cpp  FMCviewIndex2.cpp  FMCviewIndex2.h  FMCviewIndex3.cpp  FMCviewIndex4.cpp  FMCviewIndex5.cpp  FMCviewIndex6.cpp  FMCviewIndex7.cpp  FMCviewIndex7.h  FMCviewIndex8.cpp  FMCviewIndex9.cpp  main.cpp
subprocess/MFD1/: DrawFrame.h  main.cpp
subprocess/MFD2/: main.cpp
subprocess/Map/: main.cpp
subprocess/ND/: main.cpp
subprocess/PFD/: main.cpp
姿态指示仪/: 姿态指示仪.cpp
背景/: DrawBackground.h
表盘合并测试/FinalTest/: DrawAI.cpp  DrawAirspeed.cpp  DrawAlt.cpp  DrawAlt.h  DrawBackground.cpp  DrawCompass.cpp  DrawFrame.cpp  DrawFrame.h  DrawLight.cpp  DrawRCDI.h  DrawRMI.cpp  DrawRMI.h  DrawScrew.cpp  DrawScrew.h  FinalTest.debug  FinalTest.dev  FinalTest_private.res  G_variable.h  Panels simulation.ini  main.cpp  makefile.win
高度表/: 飞行仪表——高度表new.cpp
